--- a/crc-app/backend/package.json
+++ b/crc-app/backend/package.json
@@ -11,6 +11,7 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "server.js",
+  "type": "module",
   "devDependencies": {},
   "author": "Krzysztof Puchała",
   "license": "ISC",
