--- a/crc-app/backend/package.json
+++ b/crc-app/backend/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "mysql2": "^3.3.1",
     "nodemon": "^2.0.22"
   },
   "scripts": {
@@ -12,7 +13,6 @@
   "version": "1.0.0",
   "main": "server.js",
   "type": "module",
-  "devDependencies": {},
   "author": "Krzysztof Puchała",
   "license": "ISC",
   "description": ""
