Fix: modify useHttp hook, modify requestConfig file

--- a/crc-app/backend/package.json
+++ b/crc-app/backend/package.json
@@ -18,5 +18,8 @@
   "type": "module",
   "author": "Krzysztof Puchała",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "prettier": "^2.8.8"
+  }
 }
