--- a/crc-app/backend/package.json
+++ b/crc-app/backend/package.json
@@ -15,7 +15,8 @@
   },
   "scripts": {
     "start": "node server.js",
-    "runDev": "nodemon server.js"
+    "runDev": "nodemon server.js",
+    "test": "jest"
   },
   "name": "backend",
   "version": "1.0.0",
@@ -25,6 +26,10 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@babel/preset-env": "^7.21.5",
+    "@babel/preset-react": "^7.18.6",
+    "babel-jest": "^29.5.0",
+    "jest": "^29.5.0",
     "prettier": "^2.8.8"
   }
 }
