--- a/crc-app/backend/package.json
+++ b/crc-app/backend/package.json
@@ -7,6 +7,7 @@
     "db-migrate-mysql": "^2.2.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "firebase": "^9.22.0",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.3.1",
